--- a/spec-files/application-deployment.yaml
+++ b/spec-files/application-deployment.yaml
@@ -72,6 +72,8 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/success-codes: 200-499
+    alb.ingress.kubernetes.io/target-type: instance
 spec:
   rules:
   - http:
